# opencv-practical

./: CMakeLists.txt  README.md  basic_funcs.py  read.py  resizing_and_cropping.py
src/: basic_funcs.py  color_detection.py  read.py  resizing_and_cropping.py  shapes_and_text.py  wrap_perspective.py
src/cpp/: main.cpp
src/python/: basic_funcs.py  joining_images.py
